<resources>
    <string name="username">Username</string>
    <string name="start">Start</string>
    <string name="test1">Test1</string>
    <string name="test2">Test2</string>
    <string name="tutorial">Tutorial</string>
    <string name="score">Score</string>
    <string name="image">Image</string>
    <string name="results">Results</string>
    <string name="go_Back">Play Again</string>
    <string name="exit">Exit</string>

    <string name="app_name">201635011</string>
    <string name="q1">What is this flag?</string>
    <string name="Africa">Africa</string>
    <string name="Senegal">Senegal</string>
    <string name="Mali">Mali</string>
    <string name="Liberia">Liberia</string>
    <string name="Angola">Angola</string>
    <string name="Albania">Albania</string>
    <string name="Algeria">Algeria</string>
    <string name="Armenia">Armenia</string>
    <string name="Comoros">Comoros</string>
    <string name="Laos">Laos</string>
    <string name="Togo">Togo</string>
    <string name="Australia">Australia</string>
    <string name="Portugal">Portugal</string>
    <string name="NewZealand">New Zealand</string>
    <string name="UnitedKingdom">United Kingdom</string>
    <string name="Belgium">Belgium</string>
    <string name="Germany">Germany</string>
    <string name="Macedonia">Macedonia</string>
    <string name="SaintLucia">Saint Lucia</string>
    <string name="Sudan">Sudan</string>
    <string name="Nicaragua">Nicaragua</string>
    <string name="Morocco">Morocco</string>
    <string name="BurkinaFaso">Burkina Faso</string>
    <string name="Cambodia">Cambodia</string>
    <string name="Gabon">Gabon</string>
    <string name="Egypt">Egypt</string>
    <string name="Salvador">Salvador</string>
    <string name="Cameroon">Cameroon</string>
    <string name="Indonesia">Indonesia</string>
    <string name="Kenya">Kenya</string>
    <string name="Lithuania">Lithuania</string>
    <string name="Chile">Chile</string>
    <string name="China">China</string>
    <string name="Argentina">Argentina</string>
    <string name="Moldova"> Moldova</string>
    <string name="Congo">Congo</string>
    <string name="Monaco">Monaco</string>
    <string name="Netherlands">Netherlands</string>
    <string name="Cuba">Cuba</string>
    <string name="Brazil">Brazil</string>
    <string name="EastTimor">East Timor</string>
    <string name="Ecuador">Ecuador</string>
    <string name="Haiti">Haiti</string>
    <string name="Iraq">Iraq</string>
    <string name="DominicanRepublic">Dominican Republic</string>
    <string name="England">England</string>
    <string name="Georgia">Georgia</string>
    <string name="Israel">Israel</string>
    <string name="France">France</string>
    <string name="Finland">Finland</string>
    <string name="Denmark">Denmark</string>
    <string name="SriLanka">Sri Lanka</string>
    <string name="Guatemala">Guatemala</string>
    <string name="Greece">Greece</string>
    <string name="Ghana">Ghana</string>
    <string name="Guyana">Guyana</string>
    <string name="Hungary">Hungary</string>
    <string name="Ireland">Ireland</string>
    <string name="Jordan">Jordan</string>
    <string name="Kazakhstan">Kazakhstan</string>
    <string name="Iceland">Iceland</string>
    <string name="Luxembourg">Luxembourg</string>
    <string name="NorthKorea">North Korea</string>
    <string name="India">India</string>
    <string name="Libya">Libya</string>
    <string name="Palestine">Palestine</string>
    <string name="Russia">Russia</string>
    <string name="Romania">Romania</string>
    <string name="Thailand">Thailand</string>
    <string name="Italy">Italy</string>
    <string name="Sweden">Sweden</string>
    <string name="Nigeria">Nigeria</string>
    <string name="Iran">Iran</string>
    <string name="Lebanon">Lebanon</string>
    <string name="Malawi">Malawi</string>
    <string name="Pakistan">Pakistan</string>
    <string name="Kiribati">Kiribati</string>
    <string name="Paraguay">Paraguay</string>
    <string name="Rwanda">Rwanda</string>
    <string name="Serbia">Serbia</string>
    <string name="Syria">Syria</string>
    <string name="Turkmenistan">Turkmenistan</string>
    <string name="Bulgaria">Bulgaria</string>
    <string name="Afghanistan">Afghanistan</string>
    <string name="Kuwait">Kuwait</string>
    <string name="Madagascar">Madagascar</string>
    <string name="Maldives">Maldives</string>
    <string name="Latvia">Latvia</string>
    <string name="Mauritius">Mauritius</string>
    <string name="Myanmar">Myanmar</string>
    <string name="Nepal">Nepal</string>
    <string name="Mexico">Mexico</string>
    <string name="Mongolia">Mongolia</string>
    <string name="Montenegro">Montenegro</string>
    <string name="Belarus">Belarus</string>
    <string name="Namibia">Namibia</string>
    <string name="Slovakia">Slovakia</string>
    <string name="Ethiopia">Ethiopia</string>
    <string name="Estonia">Estonia</string>
    <string name="Niger">Niger</string>
    <string name="Zambia">Zambia</string>
    <string name="Norway"> Norway</string>
    <string name="Peru">Peru</string>
    <string name="Poland">Morocco</string>
    <string name="Qatar">Qatar</string>
    <string name="Austria">Austria</string>
    <string name="Bahrain">Bahrain</string>
    <string name="PapuaNewGuinea">Papua New Guinea</string>
    <string name="Switzerland">Switzerland</string>
    <string name="Czechia">Czechia</string>
    <string name="Oman">Oman</string>
    <string name="Colombia">Colombia</string>
    <string name="Croatia">Croatia</string>
    <string name="Spain">Spain</string>
    <string name="Turkey">Turkey</string>
    <string name="SanMarino">San Marino</string>
    <string name="Slovenia">Slovenia</string>
    <string name="Somalia">Somalia</string>
    <string name="SierraLeone">Sierra Leone</string>
    <string name="Singapore">Singapore</string>
    <string name="SouthKorea">South Korea</string>
    <string name="Venezuela">Venezuela</string>
    <string name="Tanzania">Tanzania</string>
    <string name="Vietnam">Vietnam</string>
    <string name="Andorra">Andorra</string>
    <string name="Mozambique">Mozambique</string>
    <string name="Tunisia">Tunisia</string>
    <string name="Azerbaijan">Azerbaijan</string>
    <string name="Ukraine">Ukraine</string>
    <string name="Canada">Canada</string>
    <string name="UnitesStatesOfAmerica">Unites States Of America</string>
    <string name="Lesotho">Lesotho</string>
    <string name="Wales"> Wales</string>
    <string name="CostaRica">Costa Rica</string>
</resources>